Fixed the space in between each section so it doesn't overlap when viewing sections.

--- a/portfolio/src/components/Contact/contact.css
+++ b/portfolio/src/components/Contact/contact.css
@@ -80,6 +80,6 @@
     background: white;
     border: 1px solid black;
     border-radius: 1rem;
-    margin: 2rem;
+    margin: 1rem;
     padding: 0.75rem 3.5rem;
 }
